--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,12 @@
-<h1>
-  {{title}}
+<h1 highlight="skyblue">
+    {{title}}
 </h1>
+
+<nav>
+    <a routerLink="/quote">Twain Quote</a>
+    <a routerLink="/heroes">Heroes</a>
+</nav>
+
+<app-welcome></app-welcome>
+
+<router-outlet></router-outlet>
